@@ -1,6 +1,3 @@
-*Sometimes NVDA does not detect the alt key going up after an alt+tab which can mean that it does funny things untill you perhaps enter and leave the menu bar or something.
-*Dos console support does not work if NVDA executable is run as a service. This chould be to do with how I'm using cygwin to test NVDA as a service, or it could have something to do with services not being able to atache to other consoles.
 *Internet explorer virtualBuffer seems to have problems with browser windows that are popup windows that don't have an address bar etc.
-*On some computers dos console new text events don't fire.
  
 
