@@ -44,4 +44,5 @@ move to and read down object: insert+shift+numpad2
 Do object default action: insert+numpadReturn
 Read current object and decendants: insert+numpadPlus
 read current object and ansesters: insert+shift+numpadPlus
-
+Move mouse to navigator object: insert+numpadDivide
+move Navigator ojbect to mouse: insert+numpadMultiply
